chore: bump api spec
