# src/types.ts
@@ -12,8 +12,10 @@ export type User = components['schemas']['User'];
 export type SocialLink = components['schemas']['SocialLink'];
 export type Category = components['schemas']['Category'];
 export type Ban = components['schemas']['Ban'];
+export type DataBanUser = components['schemas']['DataBanUser'];
 export type DataCreateUser = components['schemas']['DataCreateUser'];
 export type DataEditUser = components['schemas']['DataEditUser'];
+export type BanInformation = components['schemas']['BanInformation'];
 export type DataCreateCategory = components['schemas']['DataCreateCategory'];
 export type DataEditCategory = components['schemas']['DataEditCategory'];
 export type Message = components['schemas']['Message'];
